League page fixes for missing content, overflow Z to AA

--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -444,9 +444,12 @@ textarea.parsley-error {
 }
 .element-container .element-links .element-go {
   margin-bottom: 0px;
+  width: 100%;
 }
 .element-container .element-links .element-go .row {
+  margin-top: -20px;
   margin-bottom: 0;
+  margin-right: 0;
 }
 .element-container .element-links .element-go .row a {
   opacity: 0.6;
