--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1130,9 +1130,12 @@ input[type="checkbox"].filled-in:checked + label:after {
 }
 .element-container .element-links .element-go {
   margin-bottom: 0px;
+  width: 100%;
 }
 .element-container .element-links .element-go .row {
+  margin-top: -20px;
   margin-bottom: 0;
+  margin-right: 0;
 }
 .element-container .element-links .element-go .row a {
   opacity: 0.6;
