--- a/public/less/frontend/element.less
+++ b/public/less/frontend/element.less
@@ -192,8 +192,11 @@
 		}
 		.element-go {
 			margin-bottom: 0px;
+			width: 100%;
 			.row {
+				margin-top: -20px;
 				margin-bottom: 0;
+				margin-right: 0;
 				a {
 					opacity: 0.6;
 					height: 100px;
